# geo-comments

./: .dockerignore  .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
docs/spec/: geo-feedback.yaml  package.json
geo_comments/: __init__.py  config.py  ext.py  proxies.py  webpack.py
geo_comments/alembic/: 21e0095448da_create_marketplace_comments_feedback_.py  9ee00acd3274_create_geo_comments_tables.py  __init__.py  f79e92a678f0_create_geo_comments_revision.py
geo_comments/assets/semantic-ui/js/geo_comments/details/: index.js
geo_comments/assets/semantic-ui/js/geo_comments/details/ask_the_provider/: index.js
geo_comments/assets/semantic-ui/js/geo_comments/details/feedback_space/: index.js
geo_comments/comments/: __init__.py  schema.py
geo_comments/comments/records/: __init__.py  api.py
geo_comments/comments/records/systemfields/: __init__.py  models.py
geo_comments/comments/records/systemfields/fields/: __init__.py  entity.py
geo_comments/comments/resources/: __init__.py  config.py  parser.py  resource.py
geo_comments/comments/services/: __init__.py  components.py  config.py  facets.py  links.py  metrics.py  notification.py  results.py  services.py
geo_comments/comments/services/security/: __init__.py  generators.py  permission.py
geo_comments/contrib/: __init__.py
geo_comments/contrib/comments/jsonschemas/comments/: comment-v1.0.0.json  definitions-v1.0.0.json
geo_comments/contrib/feedbacks/jsonschemas/feedbacks/: definitions-v1.0.0.json  feedback-v1.0.0.json
geo_comments/contrib/marketplace/: __init__.py  marketplace.py  systemfield.py
geo_comments/contrib/marketplace/comments/: __init__.py  api.py  models.py  resource.py  schema.py  service.py  tasks.py
geo_comments/contrib/marketplace/feedbacks/: __init__.py  api.py  models.py  resource.py  service.py  tasks.py
geo_comments/contrib/resources/: __init__.py  resources.py  systemfield.py
geo_comments/contrib/resources/comments/: __init__.py  api.py  models.py  resource.py  schema.py  service.py  tasks.py
geo_comments/contrib/resources/feedbacks/: __init__.py  api.py  models.py  resource.py  schema.py  service.py  tasks.py
geo_comments/factories/: __init__.py  base.py  factory.py
geo_comments/resolvers/: __init__.py  registry.py
geo_comments/templates/semantic-ui/geo_comments/details/side_bar/: ask_provider.html  feedback_space.html
geo_comments/templates/semantic-ui/geo_comments/email/: notification.html
geo_comments/types/: __init__.py
geo_comments/types/comments/: __init__.py
geo_comments/types/comments/jsonschemas/: __init__.py
geo_comments/types/comments/jsonschemas/comments/: comment-v1.0.0.json  definitions-v1.0.0.json
geo_comments/types/comments/mappings/: __init__.py
geo_comments/types/comments/mappings/os-v2/comments/: comment-v1.0.0.json
geo_comments/types/comments/mappings/v7/: __init__.py
geo_comments/types/comments/mappings/v7/comments/: comment-v1.0.0.json
geo_comments/types/feedbacks/: __init__.py
geo_comments/types/feedbacks/jsonschemas/: __init__.py
geo_comments/types/feedbacks/jsonschemas/feedbacks/: feedback-v1.0.0.json
geo_comments/types/feedbacks/mappings/: __init__.py
geo_comments/types/feedbacks/mappings/os-v2/feedbacks/: feedback-v1.0.0.json
geo_comments/types/feedbacks/mappings/v7/: __init__.py
geo_comments/types/feedbacks/mappings/v7/feedbacks/: feedback-v1.0.0.json
geo_comments/views/: __init__.py  api.py
geo_feedback/: __init__.py  config.py  ext.py  proxies.py  version.py  views.py
geo_feedback/feedback/: __init__.py  generators.py  permission.py  schema.py
geo_feedback/feedback/records/: __init__.py  api.py  models.py
geo_feedback/feedback/records/jsonschemas/: __init__.py
geo_feedback/feedback/records/jsonschemas/feedback/: definitions-v1.0.0.json  feedback-v1.0.0.json
geo_feedback/feedback/records/mappings/: __init__.py
geo_feedback/feedback/records/mappings/v7/: __init__.py
geo_feedback/feedback/records/systemfields/: __init__.py  models.py
geo_feedback/feedback/records/systemfields/fields/: __init__.py  entity.py
geo_feedback/feedback/resources/: __init__.py  config.py  parser.py  resource.py
geo_feedback/feedback/services/: components.py  config.py  facets.py  links.py  service.py  services.py
geo_feedback/feedback/services/security/: __init__.py  generators.py  permission.py
geo_feedback/theme/: webpack.py
geo_feedback/theme/assets/semantic-ui/js/geo-feedback/: UserFeedbackApp.js  index.js
geo_feedback/theme/assets/semantic-ui/js/geo-feedback/components/: FeedbackModal.js  ListRatingModal.js  RatingApp.js  RatingFiveStars.js  RatingModal.js  RatingTextReview.js  index.js
geo_feedback/theme/assets/semantic-ui/js/geo-feedback/components/button/: AllFeedbackButton.js  ListFeedbackButton.js  NewFeedbackButton.js  NewReviewButton.js  index.js
geo_feedback/theme/templates/semantic-ui/geo_feedback/records/details/side_bar/: feedback.html
geo_feedback/views/: __init__.py  api.py  page.py
tests/: conftest.py  test_alembic.py  test_geo_feedback.py
tests/contrib/base/: conftest.py  test_api.py
tests/contrib/records/: conftest.py  test_api.py
tests/contrib/resources/: conftest.py  test_resource.py
tests/contrib/services/: conftest.py  test_service.py
tests/factories/: conftest.py  test_factory.py
