# -*- coding: utf-8 -*-
#
# This file is part of GEO Knowledge Hub User's Feedback Component.
# Copyright 2021 GEO Secretariat.
#
# GEO Knowledge Hub User's Feedback Component is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.
#

[metadata]
name = geo-feedback
version = attr: geo_feedback.__version__
description = User feedback module for the GEO Knowledge Hub
long_description = file: README.rst, CHANGES.rst
keywords = invenio bibliographic records geo config security
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/geo-feedback
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-i18n>=1.2.0
    invenio-rdm-records>=0.35.20,<0.36.0
    geo-config @ git+https://github.com/geo-knowledge-hub/geo-config

[options.extras_require]
docs =
    sphinx>=4.2.0,<5
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.4
    pytest-invenio>=1.4.7
    pytest-mock>=1.6.0
    sphinx>=4.2.0,<5
    tripoli~=2.0.0
    invenio-db[postgresql,versioning]>=1.0.14,<2.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0

[options.entry_points]
invenio_base.apps =
    geo_feedback = geo_feedback:GEOFeedback
invenio_config.module =
    geo_feedback = geo_feedback.config
invenio_base.api_apps =
    geo_feedback = geo_feedback:GEOFeedback
invenio_assets.webpack =
    geo_feedback = geo_feedback.theme.webpack:theme
invenio_base.api_blueprints =
    geo_feedback = geo_feedback.views.api:create_feedback_api_blueprint
invenio_i18n.translations =
    messages = geo_feedback
invenio_db.models =
    feedback = geo_feedback.feedback.records.models
invenio_search.mappings =
    feedback = geo_feedback.feedback.records.mappings
invenio_jsonschemas.schemas =
    feedback = geo_feedback.feedback.records.jsonschemas

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py
ignore = E203, W503, E501, W391

[compile_catalog]
directory = geo_feedback/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Group on Earth Observations (GEO)
msgid_bugs_address = geokhub@geosec.org
mapping-file = babel.ini
output-file = geo_feedback/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = geo_feedback/translations/messages.pot
output-dir = geo_feedback/translations/

[update_catalog]
input-file = geo_feedback/translations/messages.pot
output-dir = geo_feedback/translations/

[isort]
profile = black

[check-manifest]
ignore =
    Vagrantfile
    bootstrap*.sh
    *-requirements.txt

[tool:pytest]
addopts = --isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=geo_feedback --cov-report=term-missing
testpaths = docs tests geo_feedback
