# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2022 Geo Secretariat.
#
# geo-comments is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = geo-comments
version = attr: geo_comments.__version__
description = User comments module for the GEO Knowledge Hub
long_description = file: README.rst, CHANGES.rst
keywords = invenio bibliographic records geo config security
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/geo-comments
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    flask<=2.2.3
    werkzeug<=2.2.3

    invenio-i18n>=1.2.0
    invenio-oaiserver>=2.0.0,<2.2.0

    invenio-requests<=1.0.5

    geo-rdm-records @ git+https://github.com/geo-knowledge-hub/geo-rdm-records@b-0.8

[options.extras_require]
docs =
    Sphinx>=4.5.0
tests =
    black<=23.12.1
    pytest-black>=0.3.0
    invenio-app>=1.3.4,<2.0.0
    invenio-db[postgresql,mysql]>=1.0.14,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    pytest-lazy-fixture>=0.6.3
    sphinx>=4.5.0
    tripoli~=2.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    geo_comments = geo_comments:GEOComments
invenio_config.module =
    geo_comments = geo_comments.config
invenio_base.api_apps =
    geo_comments = geo_comments:GEOComments
invenio_base.blueprints =
    geo_comments_ext = geo_comments.views:blueprint
invenio_base.api_blueprints =
    geo_comments_package_comment = geo_comments.views.api:create_package_comment_api_blueprint
    geo_comments_package_feedback = geo_comments.views.api:create_package_feedback_api_blueprint
    geo_comments_resource_comment = geo_comments.views.api:create_resource_comment_api_blueprint
    geo_comments_resource_feedback = geo_comments.views.api:create_resource_feedback_api_blueprint
    geo_comments_marketplace_item_comment = geo_comments.views.api:create_marketplace_item_comment_api_blueprint
    geo_comments_marketplace_item_feedback = geo_comments.views.api:create_marketplace_item_feedback_api_blueprint
    geo_comments_ext = geo_comments.views:blueprint
invenio_i18n.translations =
    messages = geo_comments
invenio_db.models =
    comments_packages = geo_comments.contrib.packages.comments.models
    comments_resources = geo_comments.contrib.resources.comments.models
    feedbacks_packages = geo_comments.contrib.packages.feedbacks.models
    feedbacks_resources = geo_comments.contrib.resources.feedbacks.models
invenio_search.mappings =
    comments = geo_comments.types.comments.mappings
    feedbacks = geo_comments.types.feedbacks.mappings
invenio_jsonschemas.schemas =
    comments = geo_comments.types.comments.jsonschemas
    feedbacks = geo_comments.types.feedbacks.jsonschemas
invenio_celery.tasks =
    geo_comments_package_comment = geo_comments.contrib.packages.comments.tasks.send_notification_email
    geo_comments_package_feedback = geo_comments.contrib.packages.feedbacks.tasks.send_notification_email
    geo_comments_resource_comment = geo_comments.contrib.resources.comments.tasks.send_notification_email
    geo_comments_resource_feedback = geo_comments.contrib.resources.feedbacks.tasks.send_notification_email
    geo_comments_marketplace_item_comment = geo_comments.contrib.marketplace.comments.tasks.send_notification_email
    geo_comments_marketplace_item_feedback = geo_comments.contrib.marketplace.feedbacks.tasks.send_notification_email
invenio_assets.webpack =
    geo_comments = geo_comments.webpack:theme
invenio_db.alembic =
    geo_comments = geo_comments:alembic


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[compile_catalog]
directory = geo_comments/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Group on Earth Observations (GEO)
msgid_bugs_address = geokhub@geosec.org
mapping-file = babel.ini
output-file = geo_comments/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = geo_comments/translations/messages.pot
output-dir = geo_comments/translations/

[update_catalog]
input-file = geo_comments/translations/messages.pot
output-dir = geo_comments/translations/

[isort]
profile = black

[check-manifest]
ignore =
    Vagrantfile
    bootstrap*.sh
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=geo_comments --cov-report=term-missing
testpaths = docs tests geo_comments
